# agentry

./: .gitignore  AGENTRY_RESUME.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  agentry.example.toml  justfile
.agentry/: profile.toml
.cfdb/: README.md  cfdb.rev  graph-specs.rev
.cfdb/queries/: .gitkeep  arch-ban-briefstate-variants.cypher  arch-ban-inline-cfg-test-in-src.cypher  arch-ban-parse-target-repo-free-fn.cypher  arch-ban-phase-name-strings.cypher  arch-ban-process-exit-outside-bin.cypher  arch-ban-rundata-phase-names.cypher  arch-ban-target-repo-slug-free-fn.cypher  arch-ban-unwrap-in-prod.cypher
.gitea/workflows/: arch.yml  ci.yml
.proofs/: diagnose-167.md  green-167.txt  green-175.txt  red-167.txt  red-175.txt
containers/claude/: container-settings.json
containers/claude-agent/: Containerfile  entrypoint.sh
containers/echo-agent/: Containerfile  entrypoint.sh
crates/agentry-role-runtime/: Cargo.toml
crates/agentry-role-runtime/src/: archaeologist.rs  ci_watcher_runner.rs  claude.rs  lib.rs  planner.rs  pr_rebaser.rs  precommit_gate.rs  shipper_runner.rs
crates/agentry-role-runtime/tests/: archaeologist_runner_test.rs  auditor_runner_test.rs  ci_watcher_runner_test.rs  claude_test.rs  coder_helpers_test.rs  coder_self_review.rs  fence_types.rs  lib_test.rs  planner_runner_test.rs  pr_rebaser_runner_test.rs  precommit_gate_test.rs  preflight_criterion_runner_test.rs  provider_test.rs  ra_query_prepass_test.rs  reviewer_mechanical_runner_test.rs  reviewer_prompt_test.rs  run_fence_test.rs  shipper_runner_test.rs  verifier_dol_runner_test.rs
crates/coder-precommit/: Cargo.toml
crates/coder-precommit/src/: ac_verifier.rs  git_operator.rs  lib.rs
crates/coder-precommit/src/providers/: claude.rs  gemini.rs  grok.rs  mock.rs  mod.rs
crates/coder-precommit/tests/: ac_verifier_test.rs  dead_pub_check_parser_test.rs  git_operator_smoke.rs  git_operator_test.rs  lib_test.rs  providers_gemini_test.rs  providers_grok_test.rs  providers_mock_test.rs  providers_mod_test.rs  ship_e2e.rs
crates/orchestrator-dashboard/: Cargo.toml
crates/orchestrator-dashboard/src/: lib.rs  main.rs  metrics.rs  store.rs
crates/orchestrator-dashboard/src/routes/: briefs.rs  mod.rs  validate.rs  views.rs
crates/orchestrator-dashboard/tests/: index_renders_awaiting_decision.rs  integration_handler_concurrency.rs  integration_pipe_sharing.rs  integration_transcript_api.rs  main_helpers_test.rs  metrics_test.rs  routes_validate_test.rs  store_test.rs
crates/orchestrator-infra/: Cargo.toml
crates/orchestrator-infra/src/: lib.rs  redis_io.rs  runtime_registry.rs  transcript.rs
crates/orchestrator-infra/tests/: redis_value_as_str_test.rs  runtime_registry_poison_test.rs
crates/orchestrator-runtime/: Cargo.toml
crates/orchestrator-runtime/src/: anchor_resolver.rs  captain_dispatch_env.rs  captain_freshness.rs  captain_ground.rs  captain_ground_cache.rs  captain_new_spec.rs  cli_abort.rs  cli_agents.rs  cli_decide.rs  cli_roles.rs  cli_teams.rs  config.rs  daemon.rs  daemon_resume.rs  delivery.rs  errors.rs  intake_validation.rs  lib.rs  lifecycle.rs  lifecycle_driver.rs  lifecycle_ports.rs  lifecycle_redis.rs  permit.rs  projector.rs  reaper.rs  reaper_ports.rs  reaper_redis.rs  redis_io.rs  role_dir_loader.rs  seed.rs  spawner.rs  state.rs  submit_shape_check.rs  team_validator.rs  transcript.rs  watchdog.rs  workspace.rs
crates/orchestrator-runtime/tests/: anchor_resolver_test.rs  captain_cli_test.rs  captain_cross_repo_guard_test.rs  captain_dispatch_test.rs  captain_freshness_classify_ref_test.rs  captain_freshness_test.rs  captain_ground_cache_test.rs  captain_ground_test.rs  captain_redeploy_test.rs  cli_abort.rs  cli_agents_test.rs  cli_decide.rs  cli_roles_test.rs  cli_teams_test.rs  coder_claude_agentry_pack_resolve_test.rs  config_test.rs  daemon_intake_body_backfill.rs  daemon_resume.rs  daemon_resume_mark_failed_test.rs  daemon_test.rs  default_work_root_test.rs  delivery_test.rs  dispatch_concurrency_cap.rs  ensure_target_extracted_test.rs  fsm_barrier.rs  intake_validation_test.rs  integration_role_loader_malformed.rs  integration_transcript_capture.rs  integration_workspace_lifecycle.rs  lifecycle.rs  lifecycle_failed_cleanup.rs  lifecycle_no_op_short_circuit.rs  lifecycle_observability_test.rs  lifecycle_parallel_run.rs  lifecycle_premature_shipped_blocked.rs  messages_by_role.rs  per_target_resolver_test.rs  permit_derivation_test.rs  permit_test.rs  profile_fetch_test.rs  (+20 more)
crates/orchestrator-types/: Cargo.toml
crates/orchestrator-types/src/: brief.rs  contract.rs  event.rs  kind.rs  lib.rs  lifecycle.rs  permit.rs  pipeline.rs  profile.rs  project.rs  review.rs  role.rs  run_data.rs  target_repo.rs  team.rs  verdict.rs
crates/orchestrator-types/tests/: brief_test.rs  contract_test.rs  event_test.rs  gate_policy.rs  kind_test.rs  lib_test.rs  lifecycle.rs  permit_test.rs  pipeline_test.rs  profile.rs  project_test.rs  redeploy_required_test.rs  review_test.rs  role_pack_merge.rs  role_test.rs  target_repo_test.rs  team_test.rs  tool_pack.rs  verdict_test.rs
crates/quality-fast/: Cargo.toml
crates/quality-fast/src/: lib.rs  main.rs
crates/quality-fast/tests/: cargo_check_targets_test.rs  quality_mech.rs
crates/trace-rollup-cli/: Cargo.toml
crates/trace-rollup-cli/src/: lib.rs
crates/validators/: Cargo.toml
crates/validators/src/: impls.rs  lib.rs  stubs.rs
crates/validators/tests/: impls.rs  impls_test.rs  registry_test.rs
crates/watchdog-alerts/: Cargo.toml
crates/watchdog-alerts/src/: lib.rs
docs/: README.md  architectural-control-loop.md  captain-doctrine.md  dogfood-protocol.md  public_api_allowlist.toml  substrate-isolation-and-profile.md  watchdog-and-command-loop.md
examples/: crontab.sample  verify-M0.json  verify-M1.json  verify-M2.json  verify-M3.json  verify-M4.json  verify-M5a.json  verify-M5b.json  verify-M6.json  verify-M7.json  verify-M8-chain-A.json  verify-M8-chain-B.json  verify-M8-webhook.json
scripts/: agentry-transcript  arch-check.sh  captain-redeploy.sh
specs/: dialect.md
(+117 files in other folders)
