[workspace]
resolver = "2"
members = [
    "crates/agentry-role-runtime",
    "crates/coder-precommit",
    "crates/orchestrator-dashboard",
    "crates/orchestrator-infra",
    "crates/orchestrator-runtime",
    "crates/orchestrator-types",
    "crates/quality-fast",
    "crates/trace-query",
    "crates/trace-rollup-cli",
    "crates/validators",
    "crates/watchdog-alerts",
]
default-members = [
    "crates/agentry-role-runtime",
    "crates/coder-precommit",
    "crates/orchestrator-dashboard",
    "crates/orchestrator-infra",
    "crates/orchestrator-runtime",
    "crates/orchestrator-types",
    "crates/validators",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["yg"]
license = "MIT"
repository = "https://agency.lab:3000/yg/agentry"

[workspace.dependencies]
# Core
schemars = { version = "0.8", features = ["chrono", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async + Redis
redis = { version = "0.27", features = ["tokio-comp", "streams", "aio", "connection-manager"] }
async-trait = "0.1"
futures = "0.3"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# Crypto (M3: permit signing)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
hex = "0.4"

# HTTP + UI (dashboard)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
askama = { version = "0.12", features = ["with-axum"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config (typed, layered: defaults + TOML + env overlay)
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Persistence + encoding
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
base64 = "0.22"

[workspace.lints.rust]
unsafe_code = "forbid"

# Targeted lints only. Pedantic is noise for a small utilitarian workspace;
# re-enable individual pedantic lints if a concrete bug class surfaces.
# `expect_used` intentionally omitted — `.expect("context")` is idiomatic in tests
# and in code where a panic-with-context is the right response.
[workspace.lints.clippy]
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
