[package]
name = "coder-precommit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
anyhow = "1"
chrono = { workspace = true }
clap = { workspace = true }
orchestrator-types = { path = "../orchestrator-types" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
validators = { path = "../validators" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "dead-pub-check"
path = "src/bin/dead_pub_check.rs"

[[bin]]
name = "ac-verifier"
path = "src/bin/ac_verifier.rs"

[[bin]]
name = "ac-verifier-gemini"
path = "src/bin/ac_verifier_gemini.rs"

[[bin]]
name = "ac-verifier-grok"
path = "src/bin/ac_verifier_grok.rs"

[[bin]]
name = "ship"
path = "src/bin/ship.rs"

[[bin]]
name = "git-op-commit"
path = "src/bin/git_op_commit.rs"

[[bin]]
name = "git-op-push"
path = "src/bin/git_op_push.rs"

[lints]
workspace = true
