[package]
name = "orchestrator-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orchestrator-dashboard"
path = "src/main.rs"

[dependencies]
orchestrator-types = { path = "../orchestrator-types" }
orchestrator-runtime = { path = "../orchestrator-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
anyhow = "1.0.102"
getrandom = "0.2"

[lints]
workspace = true
