[package]
name = "orchestrator-dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "orchestrator_dashboard"
path = "src/lib.rs"

[[bin]]
name = "orchestrator-dashboard"
path = "src/main.rs"

[dependencies]
orchestrator-types = { path = "../orchestrator-types" }
orchestrator-runtime = { path = "../orchestrator-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
anyhow = "1.0.102"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3.14"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"

[lints]
workspace = true
