[package]
name = "orchestrator-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestrator-types = { path = "../orchestrator-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
redis.workspace = true
figment.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
reqwest.workspace = true
toml = { workspace = true }
base64 = "0.22"

[lints]
workspace = true
