[package]
name = "orchestrator-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "orchestratord"
path = "src/bin/orchestratord.rs"

[[bin]]
name = "orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "agentry-workspace"
path = "src/bin/agentry-workspace.rs"

[[bin]]
name = "captain"
path = "src/bin/captain.rs"

[dependencies]
orchestrator-types = { path = "../orchestrator-types" }
orchestrator-infra = { path = "../orchestrator-infra" }
schemars = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
hex.workspace = true
figment.workspace = true
reqwest.workspace = true
anyhow = "1.0.102"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
humantime = "2"
base64 = "0.22"
toml = { workspace = true }
tempfile = "3.14"

[dev-dependencies]
filetime = "0.2"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
