[package]
name = "quality-fast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[[bin]]
name = "quality-fast"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
