[package]
name = "validators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
orchestrator-types = { path = "../orchestrator-types" }
anyhow = "1"
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
